fix nav spacing

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -491,7 +491,7 @@ footer {
 
 .navBtn {
   margin-left: 15px;
-  margin-right: 15px;
+  margin-right: 35px;
   padding-top: 5px;
 }
 hr {
